--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/checkout@v4
         with:
            repository: 'ati-ozgur/the-little-blue-book-on-scheduling-turkish'
+           path: main           
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
