add token for checkout

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/checkout@v4
         with:
            repository: 'ati-ozgur/the-little-blue-book-on-scheduling-turkish'
-           path: main           
+           path: main
+           token: ${{ github.TOKEN_PAT }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
