--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,7 +30,7 @@ jobs:
         with:
            repository: 'ati-ozgur/the-little-blue-book-on-scheduling-turkish'
            path: main
-           token: ${{ github.TOKEN_PAT }}
+           token: ${{ secrets.SuperSecret }}           
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
