--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,12 +25,18 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: "check is TOKEN_PAT exists"
+        env: 
+            super_secret: ${{ secrets.TOKEN_PAT }}
+        if: ${{ env.TOKEN_PAT == '' }}
+        run: 'echo "echo the secret \"TOKEN_PAT\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"
+
+     - name: Checkout
         uses: actions/checkout@v4
         with:
            repository: 'ati-ozgur/the-little-blue-book-on-scheduling-turkish'
            path: main
-           token: ${{ secrets.SuperSecret }}           
+           token: ${{ secrets.TOKEN_PAT }}           
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
