--- a/.github/workflows/deploy-quarto-html.yml
+++ b/.github/workflows/deploy-quarto-html.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
            repository: 'ati-ozgur/the-little-blue-book-on-scheduling-turkish'
-           path: main
+           #path: .
            token: ${{ secrets.TOKEN_PAT }}           
       - name: check directories
         run: ls -al
